--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
 	<img src="img/0001.jpg" style="height: 100%;width: 100%;"/>
 <div class="video-container1">   
 <video  class="video1"  width="1" height="1"  <!--poster="img/0001.jpg"--> controls="controls" >
-<!--<source src="http://56.50.32.168:8020/z55555555555555/plus/0001.mp4" type="video/mp4">
+<!--<source src="http://56.50.32.168:8020/WebUNiversalProject/video/0001.mp4" type="video/mp4">
 -->
-<source src="http://cn-gdzh-dx-v-04.acgvideo.com/vg1/1/1b/7936558-1.mp4?expires=1467631500&amp;ssig=qLWRldqo1zdYTHq6DgVHHg&amp;oi=977508999&amp;internal=1&amp;rate=0" type="video/mp4">
+<source src="http://cn-gdfs2-dx.acgvideo.com/vg3/a/8b/8412897-1.mp4?expires=1467700500&amp;ssig=wZ-YChe3pzyJ55HFbGH6cg&amp;oi=977508999&amp;internal=1&amp;rate=0" type="video/mp4">
+	
 </video>
 <div id="video_switch"  onclick="video_switch()" class="player-switch"></div>
 </div>
